--- a/Personal-Porfolio/index.html
+++ b/Personal-Porfolio/index.html
@@ -242,26 +242,29 @@
             </p>
             <p><i class="fa-solid fa-phone"></i>0333-2222222</p>
             <div class="social-icons">
-              <a href="https://facebook.com/"
+              <a href="https://facebook.com/" target="_blank"
                 ><i class="fa-brands fa-square-facebook"></i
               ></a>
-              <a href="https://twitter.com/"
+              <a href="https://twitter.com/" target="_blank"
                 ><i class="fa-brands fa-square-x-twitter"></i
               ></a>
-              <a href="https://instagram.com/"
+              <a href="https://instagram.com/" target="_blank"
                 ><i class="fa-brands fa-square-instagram"></i
               ></a>
               <a
                 href="https://www.linkedin.com/in/abdullah-zuberi-146069205?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B62Q3zXFESruSnzs1UgmS2Q%3D%3D"
+                target="_blank"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
-              <a href="https://github.com/Abdullah-Zuberi"
+              <a href="https://github.com/Abdullah-Zuberi" target="_blank"
                 ><i class="fa-brands fa-square-github"></i
               ></a>
             </div>
             <a href="images/Abdullah's Resume.pdf" download class="btn btn2"
               >Download CV</a
             >
+
+            > >
           </div>
           <div class="contact-right">
             <form>
